# hbnmigration

./: .editorconfig  .gitignore  .gitmodules  .markdownlint.yml  .pre-commit-config.yaml  .tflint.hcl  CHANGELOG.md  LICENSE  Makefile  README.md  package.json
.github/: dependabot.yml
.github/scripts/: check-version-sync.sh  sync-version.sh
infrastructure/: .terraform.lock.hcl  iam.tf  iam_users.tf  lint  main.tf  outputs.tf  s3.tf  setup_terraform.sh  terraform-wrapper.sh  terraform.tfvars.example  variables.tf  vpc.tf
infrastructure/templates/: api-jobs.service.tpl  redcap-sync.service.tpl  redcap-to-curious.service.tpl  ripple-sync.service.tpl  ripple-sync.timer.tpl  setup_services.sh.tpl  sync-services.timer.tpl  websocket-monitor.service.tpl
javascript_jobs/: package.json
python_jobs/: README.md  conftest.py  pyproject.toml
python_jobs/src/hbnmigration/: __init__.py  config.py
python_jobs/src/hbnmigration/_config_variables/: __init__.py
python_jobs/src/hbnmigration/_config_variables/curious_variables/: __init__.py  __init__.pyi  curious_variables.pyi
python_jobs/src/hbnmigration/_config_variables/redcap_variables/: __init__.py  __init__.pyi  redcap_variables.pyi
python_jobs/src/hbnmigration/_config_variables/ripple_variables/: __init__.py  __init__.pyi  ripple_variables.pyi
python_jobs/src/hbnmigration/api_scheduler/: __init__.py
python_jobs/src/hbnmigration/exceptions/: __init__.py
python_jobs/src/hbnmigration/from_curious/: README.md  __init__.py  alerts_to_redcap.py  config.py
python_jobs/src/hbnmigration/from_redcap/: README.md  __init__.py  config.py  from_redcap.py  to_curious.py  to_redcap.py
python_jobs/src/hbnmigration/from_ripple/: README.md  __init__.py  to_redcap.py
python_jobs/src/hbnmigration/utility_functions/: __init__.py  custom.py  datatypes.py  logging.py  secrets.py
python_jobs/src/hbnmigration/websocket_monitor/: __init__.py
python_jobs/src/tests/: __init__.py  conftest.py  test_installation.py  test_redcap.py  test_ripple.py  test_secrets_utilities.py
