[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hbnmigration"
dynamic = ["version"]
description = "WebSocket and API monitoring with Iceberg logging"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyiceberg[s3fs,glue,pyarrow]>=0.5.0",
    "boto3>=1.34.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "requests>=2.32.5",
    "pytz>=2025.2",
    "types-requests>=2.32.4.20260107",
    "types-pytz>=2025.2.0.20251108",
    "pyspark>=4.1.1",
    "ipython>=9.10.0",
    "pytest>=9.0.2",
    "openpyxl>=3.1.5",
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "types-boto3",
    "aiohttp",
    "boto3-stubs[s3,glue]"
]

[project.scripts]
ripple-to-redcap = "hbnmigration.from_ripple.to_redcap:main"
websocket-monitor = "hbnmigration.websocket_monitor:main"
api-scheduler = "hbnmigration.api_scheduler:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["A", "B904", "C4", "D", "E", "EM", "F541", "G", "I", "ICN", "LOG007", "N", "NPY", "PL", "RET", "RSE", "RUF", "Q", "T20", "TRY002", "TRY201", "TRY400", "TRY401", "UP032", "W"]
ignore = ["D203", "D212"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"test_ripple.py" = ["PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
