[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hbnmigration"
dynamic = ["version"]
description = "WebSocket and API monitoring with Iceberg logging"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiohttp>=3.9.0",
    "boto3>=1.34.0",
    "ipython>=9.10.0",
    "msal>=1.35.1",
    "openpyxl>=3.1.5",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "pyiceberg[s3fs,glue,pyarrow]>=0.5.0",
    "pyspark>=4.1.1",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "types-pytz>=2025.2.0.20251108",
    "types-requests>=2.32.4.20260107",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "aiohttp",
    "boto3-stubs[s3,glue]",
    "mypy>=1.8.0",
    "pytest-asyncio>=0.23.0",
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "types-boto3",
]

[project.scripts]
redcap-to-redcap = "hbnmigration.from_redcap.to_redcap:main"
ripple-to-redcap = "hbnmigration.from_ripple.to_redcap:main"
websocket-monitor = "hbnmigration.websocket_monitor:main"
api-scheduler = "hbnmigration.api_scheduler:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["A", "B904", "C4", "D", "E", "EM", "F541", "G", "I", "ICN", "LOG007", "N", "NPY", "PL", "RET", "RSE", "RUF", "Q", "T20", "TRY002", "TRY201", "TRY400", "TRY401", "UP032", "W"]
ignore = ["D203", "D212"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"test_ripple.py" = ["PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [
    ".*_config_variables/.*_variables/__init__\\.py$"
]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
